[package]
name = "test-usb-device-metro-m4-express"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
panic-halt = "0.2"
usb-device = "0.2"

[dependencies.metro_m4]
git = "https://github.com/atsamd-rs/atsamd"
features = ["usb"]

# The usb-device dependency is specified as a patch, because atsamd uses it too
[patch.crates-io]
usb-device = { git = "https://github.com/rust-embedded-community/usb-device", branch = "master" }
